# mylife

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  render.yaml
.github/workflows/: push-dispatch.yml
apps/backend/: .env.example  pyproject.toml
apps/backend/app/: config.py  main.py  memo_logs.py  pomodoro.py  push_notifications.py  supabase_health.py
apps/backend/tests/: test_memo_logs_api.py  test_memo_logs_integration_api.py  test_memo_logs_unit.py  test_pomodoro_api.py  test_pomodoro_integration_api.py  test_pomodoro_unit.py  test_push_notifications_api.py  test_push_notifications_unit.py  test_supabase_connection_api.py
apps/frontend/: .env.example  eslint.config.js  index.html  package.json  vite.config.ts
apps/frontend/e2e/: memo-flow.spec.ts  session-flow.spec.ts
apps/frontend/public/: manifest.webmanifest  sw.js
apps/frontend/src/: App.integration.test.tsx  App.tsx  App.utils.test.ts  SessionView.tsx  SessionView.utils.test.ts  SessionViewTimer.ts  appUtils.ts  main.tsx  memoOfflineSync.test.ts  memoOfflineSync.ts  pushNotifications.test.ts  pushNotifications.ts  styles.css  useTheme.test.tsx  (+1 more)
docs/: backlog.md  deploy-minimal.md  deployment-runbook.md  dev-env-best-practices-2026-02-25.md  development-workflow.md  environment-setup.md  free-operation-feasibility-2026-02-25.md  free-tier-checklist.md  offline-sync-flow.md  requirements.md  setup.md  spec.md  supabase-setup.md
scripts/: verify_deploy.sh
supabase/migrations/: 0001_init.sql  0002_push_notifications.sql
(+3 files in other folders)
