[project]
name = "mylife-backend"
version = "0.1.0"
description = "mylife FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.116.0,<1.0.0",
  "pydantic-settings>=2.11.0,<3.0.0",
  "supabase>=2.24.0,<3.0.0"
]

[dependency-groups]
dev = [
  "pytest>=8.4.2,<9.0.0",
  "httpx>=0.28.1,<0.29.0",
  "ruff>=0.12.12,<0.13.0"
]
